venue instead of place

--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -41,7 +41,7 @@
               <tr style="line-height: 40px;">
                 <td width="150"><strong>Tempat</strong></td>
                 <td>:</td>
-                <td><%= @event.place %></td>
+                <td><%= @event.venue %></td>
               </tr>
               <tr style="line-height: 40px;">
                 <td width="150"><strong>Perasmi</strong></td>
