--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -1,5 +1,5 @@
 <!-- Begin Mail -->
-<div style="text-align: left; display: inline-block; width: 960px; height: 1500px; margin: 0; padding: 0; background:transparent url('<%= @invitation_image_url %>') top left no-repeat">
+<div style="text-align: left; display: inline-block; width: 960px; height: 1500px; margin: 0; padding: 0; background:transparent url('<%= @invitation_image_url %>') -10px 0 no-repeat; font-size: 12px;">
   <!-- Content -->
   <table cellpadding="0" cellspacing="0" style="border-collapse: separate; margin: 260px 80px 0; width: 800px; height: 600px;">
     <thead>
@@ -11,22 +11,22 @@
       <tr>
         <td>
           <div style="text-align:center; margin: 0 auto; display: block;">
-            <h2 style="font-size: 26px; text-transform: uppercase; letter-spacing: -1px; "><%= @attendee.full_name_with_prefix %></h2>
-            <h3 style="font-size: 24px; font-weight: normal; text-transform: uppercase; letter-spacing: -1px; "><%= @attendee.designation %></h3>
+            <h2 style="font-size: 250%; text-transform: uppercase; letter-spacing: -1px; "><%= @attendee.full_name_with_prefix %></h2>
+            <h3 style="font-size: 180%; font-weight: normal; text-transform: uppercase; letter-spacing: -1px; "><%= @attendee.designation %></h3>
           </div>
         </td>
       </tr>
       <tr>
         <td>
           <div style="text-align:center; margin: 0 auto; display: block; padding: 5px 0">
-            <h2 style="font-size: 26px; margin: 50px 0; text-transform: uppercase; letter-spacing: -1px; "><%= @event.name %></h2>
+            <h2 style="font-size: 250%; margin: 30px 0 0; text-transform: uppercase; letter-spacing: -1px; "><%= @event.name %></h2>
           </div>
         </td>
       </tr>
       <tr>
         <td>
           <!-- Event Details -->
-          <table width="100%" cellpadding="0" cellspacing="0" style="border-collapse: collapse; margin: 30px 0; font-size: 16px;">
+          <table width="100%" cellpadding="0" cellspacing="0" style="border-collapse: collapse; margin: 30px 0; font-size: 160%;">
             <tbody>
               <tr style="line-height: 40px;">
                 <td width="150"><strong>Tarikh</strong></td>
@@ -71,15 +71,15 @@
     </tbody>
   </table>
   <!-- Footer -->
-  <table width="100%" height="500px" cellpadding="0" cellspacing="0" style="border: none;">
+  <table width="100%" height="500px" cellpadding="0" cellspacing="0" style="border: none; margin-left: -10px;">
     <tbody>
       <tr>
         <td>
-          <div class="social-links" style="text-align: center; margin: 200px auto 0;">
-            <%= link_to 'Facebook', '#', style:"width: 70px; height: 70px; display: inline-block; background: transparent; text-indent: -9999em;margin: 0 25px 0 0;" %>
-            <%= link_to 'Twitter', '#', style:"width: 70px; height: 70px; display: inline-block; background: transparent; text-indent: -9999em;margin: 0 25px 0 0;"  %>
-            <%= link_to 'Vimeo', '#', style:"width: 70px; height: 70px; display: inline-block; background: transparent; text-indent: -9999em;margin: 0 25px 0 0;"  %>
-            <%= link_to 'Youtube', '#', style:"width: 70px; height: 70px; display: inline-block; background: transparent; text-indent: -9999em;margin: 0 25px 0 0;"  %>
+          <div class="social-links" style="text-align: center; margin: 250px auto 0;">
+            <%= link_to 'Facebook', '#', style:"width: 70px; height: 70px; display: inline-block; background: transparent; text-indent: -9999em;margin: 0 25px 0 0; text-indent: -9999em" %>
+            <%= link_to 'Twitter', '#', style:"width: 70px; height: 70px; display: inline-block; background: transparent; text-indent: -9999em;margin: 0 25px 0 0; text-indent: -9999em"  %>
+            <%= link_to 'Vimeo', '#', style:"width: 70px; height: 70px; display: inline-block; background: transparent; text-indent: -9999em;margin: 0 25px 0 0; text-indent: -9999em"  %>
+            <%= link_to 'Youtube', '#', style:"width: 70px; height: 70px; display: inline-block; background: transparent; text-indent: -9999em;margin: 0 25px 0 0; text-indent: -9999em"  %>
           </div>
         </td>
       </tr>
