--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -1,7 +1,7 @@
 <!-- Begin Mail -->
 <div style="text-align: left; display: inline-block; width: 960px; height: 1500px; margin: 0; padding: 0; background:transparent url('<%= @invitation_image_url %>') -10px 0 no-repeat; font-size: 12px;">
   <!-- Content -->
-  <table cellpadding="0" cellspacing="0" style="border-collapse: separate; margin: 260px 80px 0; width: 800px; height: 600px;">
+  <table cellpadding="0" cellspacing="0" style="border-collapse: separate; margin: 260px 80px 0; width: 800px; height: 600px; color: #333333;">
     <thead>
       <tr>
         <th></th>
@@ -41,7 +41,7 @@
               <tr style="line-height: 40px;">
                 <td width="150"><strong>Tempat</strong></td>
                 <td>:</td>
-                <td><%= @event.venue %></td>
+                <td><%= @event.place %></td>
               </tr>
               <tr style="line-height: 40px;">
                 <td width="150"><strong>Perasmi</strong></td>
