--- a/app/views/media_profiles/_choose_media_type_select.html.haml
+++ b/app/views/media_profiles/_choose_media_type_select.html.haml
@@ -8,7 +8,7 @@
         %li.field
           .picker
             - select_options = [[t('all'),'all'],[t('all_media'),'all_media']] + MediaProfile.media_types.map{ |a| [a,a]}
-            = select_tag 'media_profile_select', options_for_select(select_options, selected: @media_type)
+            = select_tag 'media_profile_select', options_for_select(select_options, selected: @media_type), include_blank: true, onChange: "submit();"
         %li.field
           = f.text_field :search, class: 'text input', size: '60', placeholder: t('enter_search_terms')
         %li
