Change 'Pilih' to 'Cari' on profile media

--- a/app/views/media_profiles/_choose_media_type_select.html.haml
+++ b/app/views/media_profiles/_choose_media_type_select.html.haml
@@ -13,4 +13,4 @@
           = f.text_field :search, class: 'text input', size: '60', placeholder: t('enter_search_terms')
         %li
           %span.inline.btn.medium.primary
-            = f.button t('select')
+            = f.button t('search')
