Change pencil icon to plus for event#show 'Add Peserta'

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -169,7 +169,7 @@
             %span
               |
             = link_to 'javascript:', :onClick => "submit();" do
-              %i.icon-pencil
+              %i.icon-plus
               =t('add_attendee')
             %span
               |
