fix add peserta buttons

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -166,16 +166,16 @@
             = f.link_to_add :walkins do
               %i.icon-user-add
               =t('add_attendee')
-            %span
-              |
-            = link_to '', :onClick => "$('form')[1].submit;" do
-              %i.icon-plus
-              =t('add_attendee')
-            %span
-              |
-            = link_to '', :onClick => "$('form')[1].action = '#{@event.id}/update_attendance';$('form')[1].submit;" do
-              %i.icon-pencil
-              =t('update')
+              %span
+                |
+              = link_to 'javascript:', :onClick => "$('form')[1].submit();" do
+                %i.icon-plus
+                =t('add_attendee')
+              %span
+                |
+              = link_to 'javascript:', :onClick => "$('form')[1].action = '#{@event.id}/update_attendance';$('form')[1].submit();" do
+                %i.icon-pencil
+                =t('update')
 
 
 
