move link bottom and change update to kemas kini kehadiran.

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -171,11 +171,11 @@
               = link_to 'javascript:', :onClick => "$('form')[1].submit();" do
                 %i.icon-plus
                 =t('add_attendee')
-              %span
-                |
-              = link_to 'javascript:', :onClick => "$('form')[1].action = '#{@event.id}/update_attendance';$('form')[1].submit();" do
-                %i.icon-pencil
-                =t('update')
+              %br
+              %div
+                = link_to 'javascript:', :onClick => "$('form')[1].action = '#{@event.id}/update_attendance';$('form')[1].submit();" do
+                  %i.icon-pencil
+                  =t('update_attendance')
 
 
 
