style for kemaskini link. event#show

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -157,3 +157,8 @@ table {
   vertical-align: text-top;
   padding-top: 15px;
 }
+
+.update-attendance {
+  font-weight: bold;
+  margin-top: 20px;
+}
